<resources>
    <string name="app_name">meditation blossom</string>
    <string name="verse_widget_small_name">Weekly Verse (Card)</string>
    <string name="verse_widget_small_description">Display this week\'s Bible verse in a card type.</string>
    <string name="verse_widget_large_name">Weekly Verse (Banner)</string>
    <string name="verse_widget_large_description">Display this week\'s Bible verse in a banner type.</string>
    <string name="widget_error_message">Unable to load verse content.\nPlease open the Meditation Blossom app, or open its Settings tab and tap Refresh Data.</string>
    <string name="widget_error_title">Meditation blossom</string>

    <string name="widget_preview_title" translatable="false">기도하면 응답되나요?</string>
    <string name="widget_preview_verses" translatable="false">28 우리가 알거니와 하나님을 사랑하는 자 곧 그의 뜻대로 부르심을 입은 자들에게는 모든 것이 합력하여 선을 이루느니라</string>
    <string name="widget_preview_books" translatable="false">로마서 8:28</string>
    <string name="widget_qt_preview_title" translatable="false">하나님의 손길 | 001 믿음으로 그 산을 오르라</string>
    <string name="widget_qt_preview_verses" translatable="false">39 예수께서 나가사 습관을 따라 감람 산에 가시매 제자들도 따라갔더니\n40 그 곳에 이르러 그들에게 이르시되 유혹에 빠지지 않게 기도하라 하시고\n41 그들을 떠나 돌 던질 만큼 가서 무릎을 꿇고 기도하여\n42 이르시되 아버지여 만일 아버지의 뜻이거든 이 잔을 내게서 옮기시옵소서 그러나 내 원대로 마시옵고 아버지의 원대로 되기를 원하나이다 하시니\n43 천사가 하늘로부터 예수께 나타나 힘을 더하더라\n44 예수께서 힘쓰고 애써 더욱 간절히 기도하시니 땀이 땅에 떨어지는 핏방울 같이 되더라\n45 기도 후에 일어나 제자들에게 가서 슬픔으로 인하여 잠든 것을 보시고\n46 이르시되 어찌하여 자느냐 시험에 들지 않게 일어나 기도하라 하시니라</string>
    <string name="widget_qt_preview_books" translatable="false">누가복음 22:39-46</string>
<!--    <string name="widget_preview_verses" translatable="false">8 이는 내 생각이 너희의 생각과 다르며 내 길은 너희의 길과 다름이니라 여호와의 말씀이니라\n9 이는 하늘이 땅보다 높음 같이 내 길은 너희의 길보다 높으며 내 생각은 너희의 생각보다 높음이니라\n28 우리가 알거니와 하나님을 사랑하는 자 곧 그의 뜻대로 부르심을 입은 자들에게는 모든 것이 합력하여 선을 이루느니라</string>-->
<!--    <string name="widget_preview_books" translatable="false">이사야 55:8–9, 로마서 8:28</string>-->
    <string name="verse_widget_qt_small_name">Daily QT (Card)</string>
    <string name="verse_widget_qt_small_description">Display today\'s QT verse in a card type.</string>
    <string name="verse_widget_qt_large_name">Daily QT (Banner)</string>
    <string name="verse_widget_qt_large_description">Display today\'s QT verse in a banner type.</string>
</resources>
