<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:paddingTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4월 26일 · 화"
            android:textColor="#99000000"
            android:textSize="11sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_qt_preview_title"
            android:textColor="@android:color/black"
            android:textFontWeight="700"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_qt_preview_books"
            android:textColor="@android:color/black"
            android:textFontWeight="500"
            android:textSize="12sp" />

        <FrameLayout android:layout_width="match_parent" android:layout_height="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_qt_preview_verses"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <FrameLayout android:layout_width="match_parent" android:layout_height="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="묵상 질문"
            android:textColor="@android:color/black"
            android:textFontWeight="500"
            android:textSize="12sp" />

        <FrameLayout android:layout_width="match_parent" android:layout_height="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. 오늘 말씀을 통해 무엇을 깨달았나요?\n2. 삶에 어떻게 적용할 수 있을까요?"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
